# arm-cli

./: .gitignore  .pre-commit-config.yaml  README.md  feature_roadmap.md  pyproject.toml  run_linters.sh
.github/workflows/: code-quality.yml  codeql-analysis.yml  integration.yml  publish.yml  security.yml  test.yml
arm_cli/: __init__.py  cli.py  config.py  config_cmd.py  settings.py  system.py
arm_cli/container/: container.py
arm_cli/guide/: __init__.py  chatbot.py  guide.py
arm_cli/projects/: __init__.py  activate.py  info.py  init.py  list.py  projects.py  remove.py
arm_cli/self/: self.py
arm_cli/system/: setup_utils.py  system.py
arm_cli/system/shell_scripts/: shell_addins.fish  shell_addins.sh  shell_addins.zsh
arm_cli/utils/: safe_subprocess.py
resources/: arm_cli_docs.json  default_project_config.json
scripts/: run_integration_tests.sh  run_linters.sh
scripts/linters/: run_bandit.sh
tests/: test_arm_cli.py  test_config.py
tests/integration/: Dockerfile  check.sh  run.sh
tests/system/: test_setup_utils.py
tests/unit/projects/: test_projects.py
