[project]
name = "arm-cli"
version = "0.1"
description = "Experimental CLI for deploying robotic applications"
readme = "README.md"
authors = [{name = "Matthew Powelson"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/mpowelson/arm-cli"
Changelog = "https://github.com/mpowelson/arm-cli/releases"
Issues = "https://github.com/mpowelson/arm-cli/issues"
CI = "https://github.com/mpowelson/arm-cli/actions"

[project.scripts]
arm-cli = "arm_cli.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
